Revision history for {{$dist->name}}

{{$NEXT}}

1.000	2011-02-21 23:25:42 UTC

	Converted to Dist::Zilla for the release process
	Add some more common misspellings, thanks RT#61505
	Fix a typo in check_pod_case which prevented it from working

0.01	0000-00-00 00:00:00 UTC

	initial release