@@ -7,7 +7,7 @@ use base qw( Exporter );
 our @EXPORT = qw( _check_case _check_common );
 
 # TODO Figure out an autoimporter?
-# apoc@blackhole:~/othergit/lintian/data/spelling$ cat corrections-case | perl -e 'while ( <STDIN> ) { next if $_ =~ /^#/; if ( $_ =~ /^(.+)\|\|(.+)$/ ) { print " \"$1\" => \"$2\",\n" } }'
+# apoc@box:~/lintian/data/spelling$ cat corrections-case | perl -e 'print "my \%case = (\n"; while ( <STDIN> ) { next if $_ =~ /^#/; if ( $_ =~ /^(.+)\|\|(.+)$/ ) { print " \"$1\" => \"$2\",\n" } }; print ");\n"'
 
 # CASE LIST
 
@@ -69,6 +69,9 @@ my %case = (
  "OpenLdap" => "OpenLDAP",
  "Openldap" => "OpenLDAP",
  "openldap" => "OpenLDAP",
+ "openstreetmap" => "OpenStreetMap",
+ "Openstreetmap" => "OpenStreetMap",
+ "OpenStreetmap" => "OpenStreetMap",
  "Postgresql" => "PostgreSQL",
  "postgresql" => "PostgreSQL",
  "python" => "Python",
@@ -137,6 +140,9 @@ sub _check_case {
 # Note that corrections involving multiple word mistakes or case errors
 # should be included in the appropriate data file, rather than here.
 
+# TODO Figure out an autoimporter?
+# apoc@box:~/lintian/data/spelling$ cat corrections | perl -e 'print "my \%common = (\n"; while ( <STDIN> ) { next if $_ =~ /^#/; if ( $_ =~ /^(.+)\|\|(.+)$/ ) { print " \"$1\" => \"$2\",\n" } }; print ");\n"'
+
 my %common = (
  "abandonning" => "abandoning",
  "abigious" => "ambiguous",
@@ -150,16 +156,18 @@ my %common = (
  "accesing" => "accessing",
  "accesnt" => "accent",
  "accessable" => "accessible",
+ "accesss" => "access",
  "accidentaly" => "accidentally",
  "accidentually" => "accidentally",
  "accomodate" => "accommodate",
  "accomodates" => "accommodates",
  "accout" => "account",
- "acess" => "access",
  "acessable" => "accessible",
+ "acess" => "access",
+ "acient" => "ancient",
+ "acknowldegement" => "acknowldegement",
  "ackowledge" => "acknowledge",
  "ackowledged" => "acknowledged",
- "acknowldegement" => "acknowldegement",
  "acording" => "according",
  "activete" => "activate",
  "acumulating" => "accumulating",
@@ -182,6 +190,7 @@ my %common = (
  "algorrithm" => "algorithm",
  "algorritm" => "algorithm",
  "allpication" => "application",
+ "alogirhtms" => "algorithms",
  "alot" => "a lot",
  "alow" => "allow",
  "alows" => "allows",
@@ -197,6 +206,8 @@ my %common = (
  "anomoly" => "anomaly",
  "aplication" => "application",
  "appearence" => "appearance",
+ "appliction" => "application",
+ "applictions" => "applications",
  "appropiate" => "appropriate",
  "appropriatly" => "appropriately",
  "aquired" => "acquired",
@@ -213,7 +224,9 @@ my %common = (
  "assigments" => "assignments",
  "assistent" => "assistant",
  "asuming" => "assuming",
+ "asycronous" => "asynchronous",
  "atomatically" => "automatically",
+ "attachement" => "attachment",
  "attemps" => "attempts",
  "attruibutes" => "attributes",
  "authentification" => "authentication",
@@ -238,10 +251,12 @@ my %common = (
  "bahavior" => "behavior",
  "baloon" => "balloon",
  "baloons" => "balloons",
+ "bandwith" => "bandwidth",
  "batery" => "battery",
  "becomming" => "becoming",
  "becuase" => "because",
  "begining" => "beginning",
+ "bianries" => "binaries",
  "calender" => "calendar",
  "cancelation" => "cancellation",
  "capabilites" => "capabilities",
@@ -252,6 +267,8 @@ my %common = (
  "changable" => "changeable",
  "charachter" => "character",
  "charachters" => "characters",
+ "charater" => "character",
+ "charaters" => "characters",
  "charcter" => "character",
  "childs" => "children",
  "chnage" => "change",
@@ -272,21 +289,27 @@ my %common = (
  "compatable" => "compatible",
  "compatibiliy" => "compatibility",
  "compatibilty" => "compatibility",
+ "compilant" => "compliant",
  "compleatly" => "completely",
  "completly" => "completely",
  "complient" => "compliant",
  "compres" => "compress",
  "compresion" => "compression",
+ "comression" => "compression",
+ "conditionaly" => "conditionally",
  "configuratoin" => "configuration",
  "conjuction" => "conjunction",
  "connectinos" => "connections",
  "connnection" => "connection",
  "connnections" => "connections",
  "consistancy" => "consistency",
+ "consistant" => "consistent",
  "containes" => "contains",
  "containts" => "contains",
+ "contaisn" => "contains",
  "contence" => "contents",
  "continous" => "continuous",
+ "continously" => "continuously",
  "continueing" => "continuing",
  "contraints" => "constraints",
  "convertor" => "converter",
@@ -305,22 +328,28 @@ my %common = (
  "decompres" => "decompress",
  "definate" => "definite",
  "definately" => "definitely",
+ "delared" => "declared",
+ "delare" => "declare",
+ "delares" => "declares",
+ "delaring" => "declaring",
  "delemiter" => "delimiter",
  "dependancies" => "dependencies",
  "dependancy" => "dependency",
  "dependant" => "dependent",
+ "depreacted" => "deprecated",
+ "depreacte" => "deprecate",
  "desactivate" => "deactivate",
  "detabase" => "database",
  "developement" => "development",
  "developped" => "developed",
  "developpement" => "development",
  "developper" => "developer",
+ "developpment" => "development",
  "deveolpment" => "development",
  "devided" => "divided",
  "dictionnary" => "dictionary",
  "diplay" => "display",
  "disapeared" => "disappeared",
- "discontiguous" => "noncontiguous",
  "dispertion" => "dispersion",
  "dissapears" => "disappears",
  "docuentation" => "documentation",
@@ -333,6 +362,7 @@ my %common = (
  "ecspecially" => "especially",
  "edditable" => "editable",
  "editting" => "editing",
+ "efficently" => "efficiently",
  "eletronic" => "electronic",
  "enchanced" => "enhanced",
  "encorporating" => "incorporating",
@@ -341,12 +371,17 @@ my %common = (
  "enlightnment" => "enlightenment",
  "enocded" => "encoded",
  "enterily" => "entirely",
+ "envireonment" => "environment",
  "enviroiment" => "environment",
  "enviroment" => "environment",
  "environement" => "environment",
  "environent" => "environment",
+ "equiped" => "equipped",
  "equivelant" => "equivalent",
  "equivilant" => "equivalent",
+ "estbalishment" => "establishment",
+ "etsablishment" => "establishment",
+ "etsbalishment" => "establishment",
  "excecutable" => "executable",
  "exceded" => "exceeded",
  "excellant" => "excellent",
@@ -354,9 +389,13 @@ my %common = (
  "exlcusive" => "exclusive",
  "expecially" => "especially",
  "explicitely" => "explicitly",
+ "explict" => "explicit",
+ "explictly" => "explicitly",
  "expresion" => "expression",
  "exprimental" => "experimental",
+ "extensability" => "extensibility",
  "extention" => "extension",
+ "extracter" => "extractor",
  "failuer" => "failure",
  "familar" => "familiar",
  "fatser" => "faster",
@@ -370,16 +409,20 @@ my %common = (
  "framwork" => "framework",
  "fuction" => "function",
  "fuctions" => "functions",
+ "functionallity" => "functionality",
  "functionaly" => "functionally",
  "functionnality" => "functionality",
+ "functiosn" => "functions",
  "functonality" => "functionality",
  "futhermore" => "furthermore",
  "generiously" => "generously",
+ "grabing" => "grabbing",
  "grahical" => "graphical",
  "grahpical" => "graphical",
  "grapic" => "graphic",
  "guage" => "gauge",
  "halfs" => "halves",
+ "handfull" => "handful",
  "heirarchically" => "hierarchically",
  "helpfull" => "helpful",
  "hierachy" => "hierarchy",
@@ -395,6 +438,7 @@ my %common = (
  "indendation" => "indentation",
  "indended" => "intended",
  "independant" => "independent",
+ "independed" => "independent",
  "informatiom" => "information",
  "informations" => "information",
  "infromation" => "information",
@@ -409,15 +453,23 @@ my %common = (
  "interchangable" => "interchangeable",
  "intermittant" => "intermittent",
  "interupted" => "interrupted",
+ "intial" => "initial",
+ "intregral" => "integral",
+ "intuative" => "intuitive",
+ "invokation" => "invocation",
+ "invokations" => "invocations",
  "jave" => "java",
  "langage" => "language",
  "langauage" => "language",
+ "langauge" => "language",
  "langugage" => "language",
  "lauch" => "launch",
+ "leightweight" => "lightweight",
  "lenght" => "length",
  "lesstiff" => "lesstif",
  "libaries" => "libraries",
  "libary" => "library",
+ "librairies" => "libraries",
  "libraris" => "libraries",
  "licenceing" => "licencing",
  "loggging" => "logging",
@@ -426,10 +478,12 @@ my %common = (
  "machinary" => "machinery",
  "maintainance" => "maintenance",
  "maintainence" => "maintenance",
+ "maintan" => "maintain",
  "makeing" => "making",
- "malplace" => "misplace",
  "malplaced" => "misplaced",
+ "malplace" => "misplace",
  "managable" => "manageable",
+ "managment" => "management",
  "manoeuvering" => "maneuvering",
  "mathimatical" => "mathematical",
  "mathimatic" => "mathematic",
@@ -442,14 +496,15 @@ my %common = (
  "miscelleneous" => "miscellaneous",
  "misformed" => "malformed",
  "mispelled" => "misspelled",
+ "mispelt" => "misspelt",
  "mmnemonic" => "mnemonic",
  "modulues" => "modules",
  "monochorome" => "monochrome",
  "monochromo" => "monochrome",
  "monocrome" => "monochrome",
  "mroe" => "more",
- "multidimensionnal" => "multidimensional",
  "mulitplied" => "multiplied",
+ "multidimensionnal" => "multidimensional",
  "mutiple" => "multiple",
  "nam" => "name",
  "nams" => "names",
@@ -464,6 +519,7 @@ my %common = (
  "noticable" => "noticeable",
  "notications" => "notifications",
  "o'caml" => "OCaml",
+ "occationally" => "occasionally",
  "omitt" => "omit",
  "ommitted" => "omitted",
  "onself" => "oneself",
@@ -484,10 +540,12 @@ my %common = (
  "paramameters" => "parameters",
  "paramater" => "parameter",
  "parametes" => "parameters",
+ "parametised" => "parametrised",
  "paramter" => "parameter",
  "paramters" => "parameters",
  "particularily" => "particularly",
  "pased" => "passed",
+ "pendantic" => "pedantic",
  "peprocessor" => "preprocessor",
  "perfoming" => "performing",
  "permissons" => "permissions",
@@ -495,7 +553,9 @@ my %common = (
  "plattform" => "platform",
  "pleaes" => "please",
  "ploting" => "plotting",
+ "poinnter" => "pointer",
  "posible" => "possible",
+ "possibilites" => "possibilities",
  "postgressql" => "PostgreSQL",
  "powerfull" => "powerful",
  "preceeded" => "preceded",
@@ -508,10 +568,13 @@ my %common = (
  "primative" => "primitive",
  "princliple" => "principle",
  "priorty" => "priority",
+ "priviledge" => "privilege",
+ "priviledges" => "privileges",
  "procceed" => "proceed",
  "proccesors" => "processors",
  "proces" => "process",
  "processessing" => "processing",
+ "processess" => "processes",
  "processpr" => "processor",
  "processsing" => "processing",
  "progams" => "programs",
@@ -524,6 +587,8 @@ my %common = (
  "pronouce" => "pronounce",
  "pronunce" => "pronounce",
  "propery" => "property",
+ "propigate" => "propagate",
+ "propigation" => "propagation",
  "prosess" => "process",
  "protable" => "portable",
  "protcol" => "protocol",
@@ -531,9 +596,9 @@ my %common = (
  "protocoll" => "protocol",
  "psychadelic" => "psychedelic",
  "quering" => "querying",
- "reasearch" => "research",
  "reasearcher" => "researcher",
  "reasearchers" => "researchers",
+ "reasearch" => "research",
  "recieved" => "received",
  "recieve" => "receive",
  "reciever" => "receiver",
@@ -556,12 +621,20 @@ my %common = (
  "replys" => "replies",
  "requiere" => "require",
  "requred" => "required",
+ "requried" => "required",
  "resizeable" => "resizable",
  "ressize" => "resize",
  "ressource" => "resource",
+ "ressources" => "resources",
  "retransmited" => "retransmitted",
+ "retreive" => "retrieve",
+ "retreived" => "retrieved",
+ "rmeoved" => "removed",
+ "rmeove" => "remove",
+ "rmeoves" => "removes",
  "runned" => "ran",
  "runnning" => "running",
+ "sacrifying" => "sacrificing",
  "safly" => "safely",
  "savable" => "saveable",
  "searchs" => "searches",
@@ -573,19 +646,23 @@ my %common = (
  "seperate" => "separate",
  "seperatly" => "separately",
  "seperator" => "separator",
+ "sepperate" => "separate",
  "sequencial" => "sequential",
  "serveral" => "several",
  "setts" => "sets",
  "similiar" => "similar",
  "simliar" => "similar",
+ "softwares" => "software",
  "speach" => "speech",
  "speciefied" => "specified",
  "specifed" => "specified",
+ "specificatin" => "specification",
  "specificaton" => "specification",
  "specifing" => "specifying",
  "speficied" => "specified",
  "speling" => "spelling",
  "splitted" => "split",
+ "spreaded" => "spread",
  "staically" => "statically",
  "standardss" => "standards",
  "standart" => "standard",
@@ -604,6 +681,7 @@ my %common = (
  "suppoted" => "supported",
  "suppported" => "supported",
  "suppport" => "support",
+ "supress" => "suppress",
  "surpresses" => "suppresses",
  "suspicously" => "suspiciously",
  "synax" => "syntax",
@@ -612,20 +690,29 @@ my %common = (
  "syncronizing" => "synchronizing",
  "syncronus" => "synchronous",
  "syste" => "system",
+ "sytem" => "system",
  "sythesis" => "synthesis",
  "taht" => "that",
+ "targetted" => "targeted",
+ "targetting" => "targeting",
+ "teh" => "the",
  "throught" => "through",
+ "transfered" => "transferred",
  "transfering" => "transferring",
  "trasmission" => "transmission",
  "treshold" => "threshold",
  "trigerring" => "triggering",
+ "unconditionaly" => "unconditionally",
  "unecessary" => "unnecessary",
  "unexecpted" => "unexpected",
  "unfortunatelly" => "unfortunately",
  "unknonw" => "unknown",
  "unkown" => "unknown",
+ "unneedingly" => "unnecessarily",
  "unuseful" => "useless",
+ "usefule" => "useful",
  "usefull" => "useful",
+ "usege" => "usage",
  "usera" => "users",
  "usetnet" => "Usenet",
  "usualy" => "usually",
@@ -646,6 +733,7 @@ my %common = (
  "whataver" => "whatever",
  "wheter" => "whether",
  "wierd" => "weird",
+ "writting" => "writing",
  "xwindows" => "X",
  "yur" => "your",
 );
@@ -709,7 +797,7 @@ Holds the wordlist used in L<Pod::Spell::CommonMistakes>. Big thanks goes out to
 	# lintian/data/spelling/corrections
 	# lintian/data/spelling/corrections-case
 
-	# Data was synced on Mon Feb 21 15:52:12 2011
-	# The git HEAD was 3afe583b84d4c75bb96f980bb02e6ca0c8e31e68
+	# Data was synced on Fri Oct 31 11:04:39 2014
+	# The git HEAD was 93cdfcaf1a7bad36da72263e2212d8f9bd7846a2
 
 =cut
