@@ -2,6 +2,9 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
 
+	Updated the wordlist
+	Add support for Pod::Spelling as an adaptor, RT#80625 ( thanks RIBASUSHI! )
+
 1.000	2011-02-21 23:25:42 UTC
 
 	Converted to Dist::Zilla for the release process
